# fphics

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: calc_time.rs  cm_to_m.rs  metric_to_imperial.rs
src/: errors.rs  lib.rs  maths.rs  physics.rs
